--- a/leaflet.Rmd
+++ b/leaflet.Rmd
@@ -34,13 +34,25 @@ my_map
 ```{r}
 library(leaflet)
 my_map <- leaflet() %>%
-  addTiles()
-my_map <- my_map %>%
+  addTiles() %>%
   addMarkers(lat=39.2980803, lng=-76.5898801, 
              popup="Jeff Leek's Office")
 my_map
 ```
 
+## Add many markers
 
+
+```{r}
+library(leaflet)
+set.seed(2016-04-25)
+df <- data.frame(lat = runif(20, min=39.2, max = 39.3),
+                 lng = runif(20, min=-76.6, max=-76.5))
+df %>%
+  leaflet() %>%
+  addTiles() %>%
+  addMarkers()
+
+```
 
 
