--- a/leaflet.Rmd
+++ b/leaflet.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "leaflet"
+title: "Leaflet project"
 #author: "masa"
-#date: '2023-01-23'
+date: '2023-01-23'
 output: html_document
 knit: (function(input_file, encoding) {
   out_dir <- 'docs';
