--- a/leaflet.Rmd
+++ b/leaflet.Rmd
@@ -9,6 +9,21 @@ knit: (function(input_file, encoding) {
     encoding=encoding,
     output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
+
+
+## Top 10 Cities by population
+
+```{r}
+library(leaflet)
+df <- read.csv("us_top_30.csv")
+df <- df[1:10,]
+df %>%
+  leaflet() %>%
+  addTiles() %>%
+  addCircles(weight=1,radius =sqrt(df$population)*50, popup = paste("#",as.character(1:nrow(df)),df$city))
+```
+
+
 ## Example map
 
 ```{r, eval=FALSE}
@@ -152,3 +167,7 @@ df %>%
   addCircleMarkers(color = df$col) %>%
   addLegend(labels=LETTERS[1:3], colors =c("blue","red","green"))
 ```
+
+
+
+
